# mnist

./: pyproject.toml
mnist-exp/: Cargo.toml
mnist-exp/src/: activation.rs  main.rs
mnist_exp/: __init__.py
